parte de formulario hecha

--- a/interaccio.html
+++ b/interaccio.html
@@ -7,7 +7,15 @@
     <link rel="stylesheet" href="estils.css">
 </head>
 <body>
-    
+    <header>
+        <div class="nav_bar">
+            <h1 class="logo">DAM1M04-Exercici006</h1>
+            <div class="enlaces">
+            <a href="index.html">Index</a>
+            <a href="interaccio.html">Interaccio</a>
+            </div>
+        </div>
+    </header>  
     
 </body>
 </html>
