--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
     </header>
 
     <main>
-        <h1>Has ganado un millón de euros</h1>
-        <h3>Introduzca sus datos para recibirlos ahora mismo</h3>
+        <h1>Formulario de Personalidad - Ejercicio 6</h1>
+        <h3>Por favor, complete el Formulario:</h3>
 
         <form action="" class="formulari">
-            <label for="nom">Nom complet</label>
+            <label for="nom">Nom complet <span class="req">*</span></label> 
             <input type="text" 
                 id="nom" 
                 name="nom"
@@ -31,7 +31,7 @@
                 title="Introdueix entre 3 i 40 caràcters. Només lletres i espais.">
 
 
-            <label for="email">Correu electrònic</label>
+            <label for="email">Correu electrònic  <span class="req">*</span> </label>
             <input type="email" id="email" name="email" required>
 
            <label for="telefon">Telèfon</label>
@@ -74,12 +74,19 @@
                 <label><input type="checkbox" name="aficions" value="lectura"> Lectura</label>
             </fieldset>
 
-            <fieldset>
+           <fieldset>
             <legend>Nivell d'estudis</legend>
-                <label><input type="radio" name="estudis" value="eso"> ESO</label>
-                <label><input type="radio" name="estudis" value="batxillerat"> Batxillerat</label>
-                <label><input type="radio" name="estudis" value="grau"> Grau</label>
-            </fieldset>
+
+        <label class="radio">
+        <input type="radio" name="estudis" value="eso">ESO</label>
+
+        <label class="radio">
+        <input type="radio" name="estudis" value="batxillerat">Batxillerat</label>
+
+        <label class="radio">
+        <input type="radio" name="estudis" value="grau">Grau</label>
+        </fieldset>
+
 
             <label for="pais">País</label>
             <select id="pais" name="pais" required>
@@ -96,9 +103,10 @@
                     rows="4" 
                     cols="40" 
                     placeholder="Escriu els teus comentaris aquí..."></textarea>
-
+            <div class="botones">
             <button type="submit">Enviar</button>
             <button type="reset">Esborrar</button>
+            </div>
 
 
 
