--- a/index.html
+++ b/index.html
@@ -5,8 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="estils.css">
     <title>Document</title>
+
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@300;400;500;600&display=swap" rel="stylesheet">
+
 </head>
-<body>
+<body class="index_body">
     <header>
         <div class="nav_bar">
             <h1 class="logo">DAM1M04-Exercici006</h1>
@@ -18,8 +23,8 @@
     </header>
 
     <main>
-        <h1>Formulario de Personalidad - Ejercicio 6</h1>
-        <h3>Por favor, complete el Formulario:</h3>
+        <h1 >Formulario  - Ejercicio 6</h1>
+        <h3>Por favor, complete el Formulario para recibir una recompensa:</h3>
 
         <form action="" class="formulari">
             <label for="nom">Nom complet <span class="req">*</span></label> 
