--- a/interaccio.html
+++ b/interaccio.html
@@ -25,7 +25,7 @@
      <h1 class="cake">Seleccionar recompensa</h1>
 
     
-    <section class="tab_container">
+    <section class="tab_section">
 
         <input type="radio" id="t1" name="tabs" checked>
         <input type="radio" id="t2" name="tabs">
@@ -55,7 +55,7 @@
     </section>
 
     
-    <section class="carousel-section">
+    <section class="carousel_section">
     <h1 class="cake">Elige tu tienda de recogida</h2>
 
     <div class="carousel">
@@ -64,11 +64,12 @@
         <input type="radio" id="c2" name="carousel">
         <input type="radio" id="c3" name="carousel">
 
-        <div class="slide s1">Imatge 1</div>
-        <div class="slide s2">Imatge 2</div>
-        <div class="slide s3">Imatge 3</div>
+        <div class="image_s1"> <img src="./assets/restaurante-en-el-centro-de-la-tienda.jpg" alt=""> </div>
 
-        <div class="carousel-controls">
+        <div class="image_s2"><img src="./assets/ventanas-francesas-estilo-provenzal.jpg" alt=""></div>
+        <div class="image_s3"> <img src="./assets/diseno-de-maqueta-en-blanco-del-letrero-de-cafe-en-un-bonito-edificio-al-aire-libre.jpg" alt=""></div>
+
+        <div class="carousel_controls">
             <label for="c1">●</label>
             <label for="c2">●</label>
             <label for="c3">●</label>
