--- a/interaccio.html
+++ b/interaccio.html
@@ -9,18 +9,25 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@300;400;500;600&display=swap" rel="stylesheet">
+<header>
+    <div class="nav_bar">
 
-</head>
-<body class="interaccio_body">
-    <header>
-        <div class="nav_bar">
-            <h1 class="logo">DAM1M04-Exercici006</h1>
-            <div class="enlaces">
+        <h1 class="logo">DAM1M04-Exercici006</h1>
+
+      
+        <input type="checkbox" id="menu_toggle" class="menu_checkbox">
+
+      
+        <label for="menu_toggle" class="menu_icon">☰</label>
+
+        <div class="enlaces">
             <a href="index.html">Index</a>
             <a href="interaccio.html">Interaccio</a>
-            </div>
         </div>
-    </header>
+
+    </div>
+</header>
+
 
      <h1 class="cake">Seleccionar recompensa</h1>
 
